# sBot9999

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RUNBOOK.md  START_AURORA.bat  START_AURORA.ps1  build.ps1  index.html  package-lock.json  package.json  start.ps1  stop-bot.ps1  temp_state.json  كيف_تشغّل_البوت_والمنصة.md
backend/: Cargo.toml
backend/src/: absorption_detector.rs  app_state.rs  cusum_detector.rs  decision_envelope.rs  execution.rs  htf_analysis.rs  main.rs  position_engine.rs  reconcile.rs  risk.rs  runtime_config.rs  smart_filters.rs  strategy.rs  trade_insurance.rs  types.rs
backend/src/api/: auth.rs  mod.rs  rest.rs  ws.rs
backend/src/arena/: mod.rs  profile.rs
backend/src/binance/: client.rs  mod.rs  rate_limit.rs
backend/src/exit/: micro_trail.rs  mod.rs  monitor.rs  triple_barrier.rs
backend/src/futures_intel/: funding_rate.rs  long_short_ratio.rs  mod.rs  open_interest.rs
backend/src/indicators/: adx.rs  atr.rs  bollinger.rs  ema.rs  mod.rs  roc.rs  rsi.rs
backend/src/market_data/: candle_buffer.rs  mod.rs  orderbook.rs  trade_stream.rs
backend/src/regime/: detector.rs  entropy.rs  hurst.rs  mod.rs
backend/src/signals/: mod.rs  signal_decay.rs  vpin.rs  weighted_score.rs
dashboard_v2/: .env.example  AUDIT_BINANCE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
dashboard_v2/src/: App.tsx  index.css
docs/: AURORA_AI_DIRECTIVE_V3.md  AURORA_UPGRADE_ROADMAP.md  README.md
docs/plan/: 00_MASTER_ROADMAP.md  (+6 more)
src/: App.tsx  index.css
(+78 files in other folders)
